--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
                 <h1>COMING SOON</h1>
             {{ end }}
             <hr>
-            <p id="demo" style="font-size:30px"></p>
+            <p id="demo" ></p>
             <div id="countdown" data-release="{{ .Site.Params.release }}"></div>
         </div>
         <div class="bottomleft">
