--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,5 +3,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Site.Params.title}}</title>
     <link rel="canonical" href="{{ .Permalink }}">
+    {{ if .Site.Params.favicon }}
+        <link rel="icon" type="image/x-icon" href="{{ .Site.Params.favicon | relURL}}">
+    {{ else }}
+        <link rel="icon" type="image/x-icon" href="{{ relURL "favicon.ico"}}">
+    {{ end }}
     <link rel="stylesheet" href="{{ "/css/styles.css" | relURL }}">
 </head>
