--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--     A HUGO theme by mansoorbarri.com -->
     {{- partial "head.html" . -}}
     {{- block "main" . }}{{- end }}
 </html>
