--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,4 +9,5 @@
         <link rel="icon" type="image/x-icon" href="{{ relURL "favicon.ico"}}">
     {{ end }}
     <link rel="stylesheet" href="{{ "/css/styles.css" | relURL }}">
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
